Ajout de l'initialisation du jeu (distribution des premières cartes)

--- a/src/main/resources/com.amazing.software/Board.fxml
+++ b/src/main/resources/com.amazing.software/Board.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.amazing.software.Controller.BoardController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane layoutX="110.0" layoutY="116.0" prefHeight="142.0" prefWidth="380.0" style="-fx-background-color: red;">
         <columnConstraints>
@@ -61,7 +61,7 @@
          </children>
       </GridPane>
       <Pane layoutX="14.0" layoutY="138.0" prefHeight="98.0" prefWidth="83.0" style="-fx-background-color: blue;" />
-      <GridPane layoutX="82.0" layoutY="14.0" prefHeight="71.0" prefWidth="437.0" style="-fx-background-color: green;">
+      <GridPane fx:id="cardP2" layoutX="82.0" layoutY="14.0" prefHeight="71.0" prefWidth="437.0" style="-fx-background-color: green;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -73,7 +73,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <GridPane layoutX="82.0" layoutY="283.0" prefHeight="71.0" prefWidth="437.0" style="-fx-background-color: green;">
+      <GridPane fx:id="cardP1" layoutX="82.0" layoutY="283.0" prefHeight="71.0" prefWidth="437.0" style="-fx-background-color: green;">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
