--- a/src/main/resources/com.amazing.software/Board.fxml
+++ b/src/main/resources/com.amazing.software/Board.fxml
@@ -20,7 +20,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane prefHeight="71.0" prefWidth="331.0" style="-fx-border-color: black;">
+            <GridPane fx:id="terrain" prefHeight="71.0" prefWidth="331.0" style="-fx-border-color: black;">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -60,7 +60,7 @@
             </GridPane>
          </children>
       </GridPane>
-      <Pane layoutX="14.0" layoutY="138.0" prefHeight="98.0" prefWidth="83.0" style="-fx-background-color: blue;" />
+      <Pane fx:id="pioche" layoutX="14.0" layoutY="138.0" prefHeight="98.0" prefWidth="83.0" style="-fx-background-color: blue;" />
       <GridPane fx:id="cardP2" layoutX="82.0" layoutY="14.0" prefHeight="71.0" prefWidth="437.0" style="-fx-background-color: green;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -74,16 +74,6 @@
         </rowConstraints>
       </GridPane>
       <GridPane fx:id="cardP1" layoutX="82.0" layoutY="283.0" prefHeight="71.0" prefWidth="437.0" style="-fx-background-color: green;">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         </rowConstraints>
       </GridPane>
       <Label layoutX="531.0" layoutY="138.0" text="Label" />
       <Label layoutX="531.0" layoutY="211.0" text="Label" />
