--- a/src/main/resources/com.amazing.software/Board.fxml
+++ b/src/main/resources/com.amazing.software/Board.fxml
@@ -27,17 +27,7 @@
          </children>
       </GridPane>
       <Pane fx:id="pioche" layoutX="14.0" layoutY="138.0" prefHeight="98.0" prefWidth="83.0" style="-fx-background-color: blue;" />
-      <GridPane fx:id="cardP2" layoutX="82.0" layoutY="14.0" prefHeight="71.0" prefWidth="437.0" style="-fx-background-color: green;">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <GridPane fx:id="handUiP2" layoutX="82.0" layoutY="14.0" style="-fx-background-color: green;">
       </GridPane>
       <GridPane fx:id="handUiP1" layoutX="82.0" layoutY="283.0" style="-fx-background-color: green;">
       </GridPane>
