--- a/src/main/resources/com.amazing.software/Board.fxml
+++ b/src/main/resources/com.amazing.software/Board.fxml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.BoxBlur?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane layoutX="110.0" layoutY="116.0" prefHeight="142.0" prefWidth="380.0" style="-fx-background-color: red;">
         <columnConstraints>
@@ -33,5 +31,7 @@
       </GridPane>
       <Label layoutX="531.0" layoutY="138.0" text="Label" />
       <Label layoutX="531.0" layoutY="211.0" text="Label" />
+      <Label fx:id="ScoreJ2" layoutX="531.0" layoutY="53.0" text="Label" />
+      <Label fx:id="ScoreJ1" layoutX="531.0" layoutY="328.0" text="Label" />
    </children>
 </AnchorPane>
