--- a/src/main/resources/com.amazing.software/Board.fxml
+++ b/src/main/resources/com.amazing.software/Board.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="anchorPane" prefHeight="710.0" prefWidth="1090.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <GridPane layoutX="110.0" layoutY="116.0" prefHeight="142.0" prefWidth="380.0" style="-fx-background-color: red;">
+      <GridPane layoutX="140.0" layoutY="199.0" prefHeight="250.0" prefWidth="700.0" style="-fx-background-color: red;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -19,21 +19,27 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane fx:id="boardUiP2" prefHeight="71.0" prefWidth="331.0" style="-fx-border-color: black;">
+            <GridPane fx:id="boardUiP1" prefHeight="114.0" prefWidth="684.0" style="-fx-border-color: black;" GridPane.rowIndex="1">
             </GridPane>
-            <GridPane fx:id="boardUiP1" prefHeight="71.0" prefWidth="331.0" style="-fx-border-color: black;" GridPane.rowIndex="1">
+            <GridPane fx:id="boardUiP2" prefHeight="77.0" prefWidth="759.0" style="-fx-border-color: black;">
+               <columnConstraints>
+                  <ColumnConstraints />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints />
+               </rowConstraints>
             </GridPane>
          </children>
       </GridPane>
-      <Pane fx:id="pioche" layoutX="14.0" layoutY="138.0" prefHeight="98.0" prefWidth="83.0" style="-fx-background-color: blue;" />
-      <GridPane fx:id="handUiP2" layoutX="82.0" layoutY="14.0" style="-fx-background-color: green;">
+      <Pane fx:id="pioche" layoutX="14.0" layoutY="275.0" prefHeight="152.0" prefWidth="113.0" style="-fx-background-color: blue;" />
+      <GridPane fx:id="handUiP2" layoutX="140.0" layoutY="56.0" prefHeight="125.0" prefWidth="700.0" style="-fx-background-color: green;">
       </GridPane>
-      <GridPane fx:id="handUiP1" layoutX="82.0" layoutY="283.0" style="-fx-background-color: green;">
+      <GridPane fx:id="handUiP1" layoutX="140.0" layoutY="467.0" prefHeight="125.0" prefWidth="700.0" style="-fx-background-color: green;">
       </GridPane>
-      <Label fx:id="PopJ2" layoutX="531.0" layoutY="138.0" text="0" />
-      <Label fx:id="PopJ1" layoutX="531.0" layoutY="211.0" text="0" />
-      <TextField fx:id="gameMasterText" editable="false" layoutX="353.0" layoutY="877.0" prefHeight="132.0" prefWidth="1314.0" style="-fx-border-color: black;" />
-      <Label fx:id="ScoreJ2" layoutX="531.0" layoutY="53.0" text="Score2: 0" />
-      <Label fx:id="ScoreJ1" layoutX="531.0" layoutY="328.0" text="Score1: 0" />
+      <Label fx:id="PopJ2" layoutX="933.0" layoutY="248.0" text="0" />
+      <Label fx:id="PopJ1" layoutX="936.0" layoutY="405.0" text="0" />
+      <TextField fx:id="gameMasterText" editable="false" layoutX="865.0" layoutY="266.0" prefHeight="115.0" prefWidth="182.0" style="-fx-border-color: black;" />
+      <Label fx:id="ScoreJ2" layoutX="915.0" layoutY="230.0" text="Score2: 0" />
+      <Label fx:id="ScoreJ1" layoutX="918.0" layoutY="388.0" text="Score1: 0" />
    </children>
 </AnchorPane>
