--- a/src/main/resources/com.amazing.software/Card.fxml
+++ b/src/main/resources/com.amazing.software/Card.fxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane fx:id="pane" prefHeight="70.0" prefWidth="40.0" style="-fx-background-color: orange;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:id="pane" prefHeight="140.0" prefWidth="105.0" style="-fx-background-color: orange;" styleClass="card" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
 </Pane>
