--- a/src/main/resources/com.amazing.software/Card.fxml
+++ b/src/main/resources/com.amazing.software/Card.fxml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 
 
 <Pane fx:id="pane" prefHeight="140.0" prefWidth="105.0" style="-fx-background-color: orange;" styleClass="card" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Pane fx:id="paneNbCard" layoutX="73.0" layoutY="-5.0" prefHeight="39.0" prefWidth="36.0">
+         <children>
+            <Label fx:id="labelNbCard" layoutX="4.0" layoutY="11.0" text="" />
+         </children>
+      </Pane>
+   </children>
 </Pane>
